# Wikipedia_RAG_Chatbot

./: .gitignore  README.md  pyproject.toml
wikipedia_rag/: main.py
